--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "color": "#060931",
         "theme": "dark"
     },
+    "icon": "./assets/images/KENOBILOGO.png",
     "categories": [
         "Themes"
     ],
